# spacecraft-anomaly-detection-env

./: .gitignore  Dockerfile  README.md  app.py  inference.py  pyproject.toml  requirements.txt
server/: app.py
spacecraft_anomaly_env/: __init__.py  models.py  openenv.yaml
spacecraft_anomaly_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
spacecraft_anomaly_env/server/: __init__.py  app.py  run.py  spacecraft_environment.py  tasks.py  telemetry.py
spacecraft_anomaly_env/tests/: __init__.py  test_environment.py
