[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spacecraft-anomaly-env"
version = "1.0.0"
description = "Real-world spacecraft telemetry anomaly detection environment for RL agent training."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Spacecraft Anomaly OpenEnv Team"},
]
maintainers = [
    {name = "Spacecraft Anomaly OpenEnv Team"},
]
keywords = ["openenv", "spacecraft", "anomaly-detection", "telemetry", "rl", "real-world"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Games/Entertainment :: Simulation",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "openenv-core>=0.2.0",
]
[project.scripts]
server = "spacecraft_anomaly_env.server.run:main"

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
]
dev = [
    "pytest>=7.4.0",
    "black",
    "isort",
    "flake8",
]

[project.scripts]
server = "spacecraft_anomaly_env.server.run:main"

[project.urls]
Homepage = "https://github.com/example/spacecraft-anomaly-env"
Repository = "https://github.com/example/spacecraft-anomaly-env.git"
Issues = "https://github.com/example/spacecraft-anomaly-env/issues"

[tool.setuptools]
packages = ["spacecraft_anomaly_env", "spacecraft_anomaly_env.server", "spacecraft_anomaly_env.tests"]

[tool.setuptools.package-data]
spacecraft_anomaly_env = ["openenv.yaml"]

[tool.pytest.ini_options]
testpaths = ["spacecraft_anomaly_env/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
